--- a/frontend/.prettierrc
+++ b/frontend/.prettierrc
@@ -4,7 +4,22 @@
     "singleQuote": true,
     "trailingComma": "none",
     "printWidth": 100,
+    "semi": true,
+    "bracketSpacing": true,
+    "arrowParens": "always",
+    "endOfLine": "lf",
     "plugins": ["prettier-plugin-svelte"],
     "pluginSearchDirs": ["."],
-    "overrides": [{ "files": "*.svelte", "options": { "parser": "svelte" } }]
+    "overrides": [
+        {
+            "files": "*.svelte",
+            "options": {
+                "parser": "svelte",
+                "svelteStrictMode": true,
+                "svelteBracketNewLine": true,
+                "svelteAllowShorthand": false,
+                "svelteIndentScriptAndStyle": true
+            }
+        }
+    ]
 }
