feat(AI): Added linting to backend

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -23,6 +23,9 @@
         ],
         "*.{json,css,md}": [
             "prettier --write"
+        ],
+        "*.py": [
+            "../scripts/lint-python.sh"
         ]
     },
     "devDependencies": {
