--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -4,6 +4,11 @@ websockets==12.0
 pytest==7.4.3
 pytest-cov==4.1.0
 python-dotenv==1.0.0
+
+# Development dependencies
+black==24.1.0
 flake8==7.0.0
-black==24.1.1
+flake8-docstrings==1.7.0
+flake8-quotes==3.4.0
+flake8-bugbear==24.1.17
 isort==5.13.2
