fix(AI): moved husky to root

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,21 +11,7 @@
         "lint": "eslint \"src/**/*.{js,ts,svelte}\"",
         "lint:fix": "eslint \"src/**/*.{js,ts,svelte}\" --fix",
         "format": "prettier --write \"src/**/*.{js,ts,svelte,css}\"",
-        "format:check": "prettier --check \"src/**/*.{js,ts,svelte,css}\"",
-        "prepare": "if [ -z \"$SKIP_HUSKY\" ]; then cd .. && husky install frontend/.husky; fi",
-        "pre-commit": "lint-staged"
-    },
-    "lint-staged": {
-        "src/**/*.{js,ts,svelte}": [
-            "prettier --write",
-            "eslint --fix"
-        ],
-        "src/**/*.{json,css,md}": [
-            "prettier --write"
-        ],
-        "**/*.py": [
-            "cd .. && node scripts/lint-python.js"
-        ]
+        "format:check": "prettier --check \"src/**/*.{js,ts,svelte,css}\""
     },
     "devDependencies": {
         "@eslint/js": "^9.19.0",
@@ -39,7 +25,6 @@
         "eslint": "^9.19.0",
         "eslint-config-prettier": "^10.0.1",
         "eslint-plugin-svelte": "^2.46.1",
-        "husky": "^8.0.3",
         "lint-staged": "^15.2.0",
         "prettier": "^3.4.2",
         "prettier-plugin-svelte": "^3.3.3",
