--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,7 +11,9 @@
         "lint": "eslint \"src/**/*.{js,ts,svelte}\"",
         "lint:fix": "eslint \"src/**/*.{js,ts,svelte}\" --fix",
         "format": "prettier --write \"src/**/*.{js,ts,svelte,css}\"",
-        "format:check": "prettier --check \"src/**/*.{js,ts,svelte,css}\""
+        "format:check": "prettier --check \"src/**/*.{js,ts,svelte,css}\"",
+        "test": "vitest run",
+        "test:watch": "vitest"
     },
     "devDependencies": {
         "@eslint/js": "^9.19.0",
@@ -19,12 +21,15 @@
         "@sveltejs/adapter-static": "^3.0.1",
         "@sveltejs/kit": "^2.0.0",
         "@sveltejs/vite-plugin-svelte": "^3.0.0",
+        "@testing-library/jest-dom": "^6.2.0",
+        "@testing-library/svelte": "^4.0.5",
         "@tsconfig/svelte": "^5.0.2",
         "@typescript-eslint/eslint-plugin": "^8.21.0",
         "@typescript-eslint/parser": "^8.21.0",
         "eslint": "^9.19.0",
         "eslint-config-prettier": "^10.0.1",
         "eslint-plugin-svelte": "^2.46.1",
+        "jsdom": "^24.0.0",
         "lint-staged": "^15.2.0",
         "prettier": "^3.4.2",
         "prettier-plugin-svelte": "^3.3.3",
@@ -33,6 +38,7 @@
         "svelte-eslint-parser": "^0.43.0",
         "tslib": "^2.4.1",
         "typescript": "^5.0.0",
-        "vite": "^5.0.3"
+        "vite": "^5.0.3",
+        "vitest": "^1.2.1"
     }
 }
