chore: update github ci.yml to attempt to pass tests

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -38,6 +38,11 @@ jobs:
           cd frontend
           npm install
 
+      - name: Generate SvelteKit types
+        run: |
+          cd frontend
+          npx svelte-kit sync
+
       - name: Run frontend tests
         run: |
           cd frontend
